# kanguros.code

./: README.md
cli_wrapper/: __init__.py
dynamic_click/: pyproject.toml
dynamic_click/my_package/: cli.py
dynamic_click/my_package/tasks/shell/: command1.py  command2.py
dynamic_click/my_package/tasks/utils/: command1.py
poetry_tree/: poetry_tree.py
